# CPlug

./: .gitignore  .travis.yml  Aux.html  CGen-Typed.html  CGen.html  Data-Either-Aux.html  Data-Fixable.html  Data-Text-Aux.html  Data-Wrapped.html  HSGen-FFI.html  HSGen-Recompiler-Class.html  HSGen-Recompiler-Instances.html  HSGen.html  LICENSE  Parse-Templates.html  Parse-Types.html  Parse.html  README.md  Text-PrettyPrint-HughesPJ-Ext.html  benchmarks.html  benchmarks_prev.html  cplug.cabal  cplug.haddock  cplug.txt  doc-index-35.html  doc-index-36.html  doc-index-A.html  doc-index-All.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-I.html  doc-index-J.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  (+28 more)
.stack-work/install/x86_64-osx/lts-4.0/7.10.3/flag-cache/: QuickCheck-2.8.1-2d6cd004afd88b281717e42954a21ed2  alex-3.1.6  basic-0.1.0.0-bbaafae1e40c9f19b4987d19d575fd9c  basic-0.1.0.0-c921f0a1f46d1e04c3585e6a88ccf6c7  language-c-0.4.7-23846c6de48f456c33026f6cf54165d8  tf-random-0.5-480c9ee7a59a920bf5dbbb56d8df6080
.stack-work/install/x86_64-osx/lts-4.0/7.10.3/lib/x86_64-osx-ghc-7.10.3/basic-0.1.0.0-B23UZaniRYrJVP8ZSMg3uq/: CTypes.dyn_hi  CTypes.hi  Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-osx/lts-4.0/7.10.3/lib/x86_64-osx-ghc-7.10.3/basic-0.1.0.0-Iwgl37Yr1wy2iYDBJ46Q5J/: Lib.dyn_hi  Lib.hi  libHSbasic-0.1.0.0-Iwgl37Yr1wy2iYDBJ46Q5J-ghc7.10.3.dylib
app/: Main.hs
bench/: Main.hs  Notes.txt
bench/Bench/Data/: Undefined.hs
bench/Bench/HSGen/Recompiler/: Class.hs
bench/Bench/Parse/: Templates.hs
dispc/: Test.hs  add.hs  hadd
gitTools/: coln.sh  dump_all_versions.sh  stats.hs
oldsrc/: CTemplates.hs  CTypes.hs  Play.hs  Test.hi  test2.h  tesths
oldsrc/pipex/: echo
oldsrc/tc/: FfiEx.hs
src/: Aux.hs  Aux.html  CGen-Typed.html  CGen.hs  CGen.html  CTemplates.hs  Data-Default-Aux.html  Data-Either-Aux.html  Data-Fixable.html  Data-Text-Aux.html  Data-Wrapped.html  FixData.hs  HSGen-FFI.html  HSGen-Recompiler-Class.html  HSGen-Recompiler-Instances.html  HSGen.hs  HSGen.html  Notes.txt  Parse-Templates.html  Parse-Types.html  Parse.hs  Parse.html  Play.hs  Templated.hs  Test.hs  Text-PrettyPrint-HughesPJ-Ext.html  a.out  test.c  test2.c  testc
src/CGen/: Compiler.hs  Typed.hs
src/Data/: Fixable.hs  Fixed.hs  Undefined.hs  Wrapped.hs
src/Data/Default/: Aux.hs
src/Data/Either/: Aux.hs
src/Data/Text/: Aux.hs
src/HSGen/: FFI.hs
src/HSGen/Recompiler/: Class.hs  Instances.hs
src/Parse/: Templates.hs  Types.hs
src/Text/PrettyPrint/HughesPJ/: Ext.hs
src/cex/: m2  m2.c
src/cex2/: m2  m2.c  main.c  mm  n2  n2.c
src/cex3/: Names.hs  simple_tests.c
src/pipex/: echo.c  runner.c
src/tc/: FfiEx.hi  Termios.hi  Termios.hs  termops.c  termops.h
src/tc2/: Test.hi  add.hi  test  test.c  test.h
src2/: CGen.hs  HSGen.hs  Parse.hs  Test.hs
src2/CGen/: Typed.hs  rw.c  type_list.c
src2/Data/: Fixed.hs  Wrapped.hs
src2/Data/Text/: Extras.hs
src2/HSGen/Recompiler/: Class.hs  Instances.hs
src2/Parse/: Templates.hs  Types.hs
src2/cex/: m  m.c  parse.c  t.txt
test/: Ex.hs  Scratch.hs  Spec.hs
test/Test/Data/: Undefined.hs
test/Test/HSGen/Recompiler/: Class.hs
