name:                cplug
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/michaeljklein/CPlug   
license:             BSD3
license-file:        LICENSE
author:              Michael Klein
maintainer:          lambdamichael@gmail.com
copyright:           2016 Michael Klein
category:            Foreign
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Aux, CGen, CGen.Typed, HSGen, HSGen.Recompiler.Class, HSGen.Recompiler.Instances, Parse, Parse.Templates, Parse.Types, Data.Fixed, Data.Wrapped, Data.Either.Aux, Data.Text.Aux
  build-depends:       base >= 4.7 && < 5, text >= 1.2.2 && < 1.2.3, language-c >= 0.4.7 && < 0.6, text >= 1.2.2.0 && < 1.2.3, text-show >= 2.1.2 && < 3.3
  default-language:    Haskell2010

executable cplug-main
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cplug
  default-language:    Haskell2010

test-suite cplug-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cplug
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/michaeljklein/CPlug.git
