name:                cplug
version:             0.2.0.0
synopsis:            Recompile and run partially applied C functions in Haskell, during runtime
description:         Please see README.md
homepage:            https://github.com/michaeljklein/CPlug   
license:             BSD3
license-file:        LICENSE
author:              Michael Klein
maintainer:          lambdamichael@gmail.com
copyright:           2016 Michael Klein
category:            Foreign
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Aux
                     , CGen     
                     , CGen.Typed
                     , Data.Either.Aux
                     , Data.Fixable
                     , Data.Text.Aux
                     , Data.Undefined
                     , Data.Wrapped
                     , HSGen
                     , HSGen.FFI
                     , HSGen.Recompiler.Class
                     , HSGen.Recompiler.Instances
                     , Parse
                     , Parse.Templates
                     , Parse.Types

  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.4 && < 0.10.7 
                     , data-default >= 0.5.0 && < 0.5.5 
                     , directory >= 1.2.2 && < 1.2.7 
                     , ghc-prim == 0.4.0.0 
                     , language-c >= 0.4.7 && < 0.6 
                     , process >= 1.2 && < 1.5
                     , temporary >= 1.2 && < 1.3
                     , text >= 1.2.2 && < 1.2.3 
                     , text >= 1.2.2.0 && < 1.2.3 
                     , text-show >= 2.1.2 && < 3.3 
                     , unix >= 2.7.1 && < 2.7.3
  other-modules:       Data.Default.Aux
  default-language:    Haskell2010

executable cplug-main
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cplug
  default-language:    Haskell2010

benchmark cplug-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  build-depends:       base
                     , cplug
                     , criterion >= 1.1.0.0 && < 1.2.0.0
  other-modules:       Bench.Data.Undefined
                     , Bench.HSGen.Recompiler.Class
  ghc-options:         -O3
  default-language:    Haskell2010

test-suite cplug-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cplug
  other-modules:       Test.Data.Undefined
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/michaeljklein/CPlug.git
